features: add push notifications and create image processing when user upload the media (#18)